# overall_survival_prediction_of_advanced_non_small_cell_lung_cancer

./: .gitignore
sources/examples/: main_training_testing_split_CNN3DModel_diseaseFailure.py  main_training_testing_split_DeepConvSurv2_OS.py  main_training_testing_split_DeepConvSurvAttention_OS.py  main_training_testing_split_DeepConvSurvCBAM_OS.py  main_training_testing_split_DeepConvSurv_OS.py  main_training_testing_split_DeepConvSurv_OS_diseaseFailure.py  main_training_testing_split_DeepConvSurv_OS_pneumonitis_diseaseFailure.py  main_training_testing_split_DeepConvSurv_PFS.py  main_training_testing_split_DeepConvSurv_autoEncoderSegSkipConnection_OS.py  main_training_testing_split_DeepConvSurv_autoEncoderSegSkipConnection_imaging_clinics_OS.py  main_training_testing_split_DeepConvSurv_autoEncoderSeg_OS.py  main_training_testing_split_DeepConvSurv_autoEncoder_OS.py  main_training_testing_split_DeepConvSurv_autoEncoder_dose_OS.py  main_training_testing_split_DeepConvSurv_autoEncoder_dose_clinics_OS.py  main_training_testing_split_DeepConvSurv_autoEncoder_imaging_clinics_OS.py  main_training_testing_split_DeepConvSurv_autoEncoder_imaging_dose_clinics_OS.py  main_training_testing_split_DeepConvSurv_dose_OS.py  main_training_testing_split_DeepConvSurv_dose_clinics_OS.py  main_training_testing_split_UNet.py  (+16 more)
sources/preprocessing/boundingBox/: CMakeLists.txt
sources/preprocessing/boundingBox/source/: boundingBox.cpp
sources/preprocessing/extractConnectedComponent/: CMakeLists.txt
sources/preprocessing/extractConnectedComponent/source/: extractConnectedComponent.cpp
(+219 files in other folders)
